--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="page3.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Corporations</a>
-                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="true"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
