--- a/page7.html
+++ b/page7.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
 
     
 
@@ -216,7 +216,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">SMEs</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">We providing SMEs a no-obligation 'fremium' service in order to demonstrate the value we bring. We offer tiered bronze, silver, gold packages thereafter.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">We provide SMEs a no-obligation 'fremium' service in order to demonstrate the value we bring. We offer tiered bronze, silver, gold packages thereafter.</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="page1.html" class="btn btn-primary display-4">How it works</a></div>
                 </div>
