--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="page3.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Corporations</a>
-                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item dropdown open"><a class="nav-link link text-warning dropdown-toggle display-4" href="page7.html" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-question mbr-iconfont mbr-iconfont-btn"></span>About</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page6.html" aria-expanded="false">What is R100?<br></a><a class="text-warning dropdown-item display-4" href="page1.html" aria-expanded="false">How it Works<br></a></div></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item dropdown open"><a class="nav-link link text-warning dropdown-toggle display-4" href="page1.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-question mbr-iconfont mbr-iconfont-btn"></span>About</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page2.html" aria-expanded="false">How it Works<br></a><a class="text-warning dropdown-item display-4" href="page6.html" aria-expanded="false">What is R100?<br></a></div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
